# qol

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
scripts/: canned_test.sh  local_aavaaz.sh  restart_all.sh
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  commands.rs  config.rs  inject.rs  main.rs  polish.rs  session.rs  shortcut.rs  transport.rs  trigger.rs
